@@ -4,9 +4,11 @@
 
 -bug#0002398: Buffer overflow
 -bug#0002447: Building spine on Debian Jessie (testing) fails 
+-bug#0002536: Spine segfaults when 18k+ hosts are to be pulled
 -bug#0002576: Call to a non-existent column of the database in poller.c
 -bug#0002578: spine doesn't compile on ubuntu 12.04
 -bug#0002585: Spine: buffer overflow in logging when RESULTS_BUFFER>LOGSIZE can SEGV
+-bug#0002588: Spine "is_numeric" incorrectly returns TRUE for some hexadecimal values 
 
 0.8.8d
 
